# DIFMAP

./: .gitignore  ANALYSE_TECHNIQUE.md  GUIDE_IMPLEMENTATION.md  README  README.md  build_for_python.sh  change_details  configure  difmap.log_1  difmap.log_2  difmap.log_3  difmap.log_4  difmap.log_5  difmap.log_6  difmap.log_7  meson.build  pyproject.toml  run_visu.py  script.py  setup.sh  test_difmap.py  trace.txt
binding/: cdifmap.pxd  difmap_native.pyx
difmap_src/: clphs.c  clplot.c  difmap.c  difmap_api.h  makefile.distrib  mc.c  mc.h  moddif.c  model.c  obs.c  obs.h  resoff.c  slfcal.c  slfcal.h  startup.c  subarray.c  telcor.c  units.c  uvaver.c  uvradplt.c  vedit.c  vedit.h  version.h  visplot.h  vlbconst.h  vplot.c  vplot.h
difmap_wrapper/: __init__.py  exceptions.py  imaging.py  observation.py  session.py  standardizer.py  uv.py
doc/: beamsize.tex
docs/: 00_installation.qmd  01_contexte_et_existant.qmd  02_nouvelle_architecture.qmd  03_implementation_technique.qmd  05_quick_start.qmd  _quarto.yml  index.qmd  objects.json  te
docs/_site/: 00_installation.html  01_contexte_et_existant.html  02_nouvelle_architecture.html  03_implementation_technique.html  05_quick_start.html  about.html  index.html  search.json  styles.css
docs/_site/reference/: exceptions.DifmapError.html  exceptions.DifmapStateError.html  imaging.DifmapImager.html  index.html  session.DifmapSession.html
docs/_site/site_libs/bootstrap/: bootstrap.min.css
docs/reference/: exceptions.DifmapError.qmd  exceptions.DifmapStateError.qmd  imaging.DifmapImager.qmd  index.qmd  session.DifmapSession.qmd
fits_src/: fitkey.c  fitkey.h  phdu.c  sysfits.h
help/: difmap.idx  fix_weights.hlp  mapunits.hlp  maths.idx  projplot.hlp  real.hlp  resoff.hlp  selfant.hlp  selfcal.hlp  selflims.hlp  smartedit.hlp  uvstat.hlp
libtecla_src/: Makefile.in  configure  configure.ac
logio_src/: logio.c
pager_src/: pager.c  pager.h
recio_src/: makefile.distrib  recio.c  recio.h
scrfil_src/: edfile.c  makefile.distrib  scrfil.h  scrfile.c
slalib_src/: evp.c
sphere_src/: compile.c  func.c  lex.c  mathlib.c
tests/: conftest.py  test_binding.py  test_imaging.py  test_observation.py  test_session.py  test_standardizer.py  test_uv.py
