[build-system]
# On force pip à télécharger le Cython moderne et le NumPy moderne
# pour son dossier de compilation isolé
requires = ["meson-python", "cython>=3.0.0", "numpy>=2.0.0"]
build-backend = "mesonpy"

[project]
name = "difmap_smartedit"
version = "2.5.0"
description = "Python binding for Difmap"
requires-python = ">=3.8"
dependencies = [
    "numpy>=2.0.0", 
    "astropy"
]